P5/P5-flotodor-envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: envoy.access_loggers.stdout
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: flotodor_service
              domains: ["*"]
              routes:
              - match: { path: "/" }
                route:
                  cluster: flotodor_cluster
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: flotodor_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: flotodor_cluster
      endpoints:
      - lb_endpoints:
        - endpoint: { address: { socket_address: { address: 192.168.10.2, port_value: 80 } } }
        - endpoint: { address: { socket_address: { address: 192.168.10.3, port_value: 80 } } }
        - endpoint: { address: { socket_address: { address: 192.168.10.4, port_value: 80 } } }
        - endpoint: { address: { socket_address: { address: 192.168.10.5, port_value: 80 } } }
        - endpoint: { address: { socket_address: { address: 192.168.10.6, port_value: 80 } } }
        - endpoint: { address: { socket_address: { address: 192.168.10.7, port_value: 80 } } }
        - endpoint: { address: { socket_address: { address: 192.168.10.8, port_value: 80 } } }
        - endpoint: { address: { socket_address: { address: 192.168.10.9, port_value: 80 } } }

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
